--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,101 @@
-body {
-	background: #3399FF;
-	color: #FFCC66;
+body{
+	font-family: "Lucida Console", monaco, monospace;
+	color: black;
+	background-image: url(../images/podbackground4.jpg.);
+	background-repeat: no-repeat;
+	background-attachment: scroll;
+	background-size: contain; 
+	background-color: rgb(255,255,255);
+	margin: 50px;
+
 }
+
+h1{
+	text-transform: lowercase;
+	text-align: right;
+	color: white;
+	background-color: rgba(0,0,0,1);
+	margin-top: -50px;
+	margin-left: -50px;
+	margin-right: -50px;
+	margin-bottom: 0px;
+	padding-top: 20px;
+	padding-right: 20px;
+}
+
+img{
+	float: top;
+	width: 766px;
+	opacity: .7;
+	margin-top: 0px;
+	margin-left: -50px;
+	margin-right: 0px;
+	margin-bottom: 0px;
+	padding: -50px;
+	border-style: none;
+	border-color: rgba(0,0,0,.3);
+
+}
+
+ul{
+	list-style-type: none;
+	background-size: 200px;
+}
+
+li{
+	padding: 10px;
+
+}
+
+#directory{
+	float: right;
+	background-color: rgba(0,0,0,.4);
+	color: white;
+	font-weight: bold;
+	text-align: left;
+	width: 187px;
+	height: 700px;
+	line-height: 25px;
+	margin-top: 0px;
+	margin-left: -50px;
+	margin-right: -50px;
+	margin-bottom: -80px;
+	padding-top: 20px;
+
+}
+
+#slogan{
+	float: right;
+	margin-top: -400px;
+	margin-right: 100px;
+	background-color: rgba(255,255,255,.5);
+	line-height: 50px;
+	text-align: center;
+	color: black;
+	font-style: italic;
+
+}
+
+#tagline{
+	float: top;
+	color: white;
+	text-align: right;
+	font-size: 90;
+	line-height: 22px;
+	background-color: rgba(0,0,0,1);
+	height: 50px;
+	width: 1400px;
+	padding: 10px;
+	margin-top: -3px;
+	margin-left: -50px;
+	margin-right: -70px;
+}
+/*
+#episodes{
+	text-transform: uppercase;
+	background-color: rgba(0,0,0,.4);
+	line-height: 10;
+	background-size: 100px;
+
+}
+*/
