--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 body{
 	font-family: "Lucida Console", monaco, monospace;
 	color: black;
-	background-image: url(../images/podbackground4.jpg.);
 	background-repeat: no-repeat;
 	background-attachment: scroll;
 	background-size: contain; 
@@ -10,7 +9,7 @@ body{
 
 }
 
-h1{
+header{
 	text-transform: lowercase;
 	text-align: right;
 	color: white;
@@ -18,9 +17,9 @@ h1{
 	margin-top: -50px;
 	margin-left: -50px;
 	margin-right: -50px;
-	margin-bottom: 0px;
-	padding-top: 20px;
-	padding-right: 20px;
+	margin-bottom: -22px;
+	padding-top: 2px;
+	padding-right: 0px;
 }
 
 img{
@@ -43,15 +42,16 @@ ul{
 }
 
 li{
-	padding: 10px;
+	padding: 5px;
+	width: 150px;
 
 }
 
-#directory{
+nav{
 	float: right;
 	background-color: rgba(0,0,0,.4);
 	color: white;
-	font-weight: bold;
+	font-weight: normal;
 	text-align: left;
 	width: 187px;
 	height: 700px;
@@ -67,7 +67,7 @@ li{
 #slogan{
 	float: right;
 	margin-top: -400px;
-	margin-right: 100px;
+	margin-right: 125px;
 	background-color: rgba(255,255,255,.5);
 	line-height: 50px;
 	text-align: center;
@@ -90,12 +90,12 @@ li{
 	margin-left: -50px;
 	margin-right: -70px;
 }
-/*
-#episodes{
+
+.episodes{
 	text-transform: uppercase;
 	background-color: rgba(0,0,0,.4);
 	line-height: 10;
 	background-size: 100px;
 
 }
-*/
+
