--- a/css/style.css
+++ b/css/style.css
@@ -16,21 +16,25 @@ header{
 	background-color: rgba(0,0,0,1);
 	padding:1em;
 }
-
+section#splash {
+	float:right;
+}
 img{
+	display:block;
+	float:left;
 	width: 766px;
 	opacity: .7;
 	border-style: none;
 	border-color: rgba(0,0,0,.3);
-
 }
 
 ul{
 	list-style-type: none;
+	margin:1em 0 1em 0;
 }
 
 li{
-	padding: 5px;
+	padding: .25em;
 	width: 150px;
 
 }
@@ -49,16 +53,19 @@ nav{
 	text-align: center;
 	color: #222;
 	font-style: italic;
+	font-size:3em;
+	float:left;
 }
 
 #tagline{
-	color: white;
-	text-align: right;
-	font-size: 5.5em;
+	clear:both;
 	background-color: rgba(0,0,0,1);
-	height: 50px;
+	color: white;
+	font-size: 1.5em;
+	line-height:1em;
+	padding: 1em;
+	text-align: right;
 	width: 1400px;
-	padding: 10px;
 }
 
 .episodes{
