--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,8 @@
 body{
 	font-family: "Lucida Console", monaco, monospace;
 	color: #222;
-	background-color: rgb(255,255,255);
+	
+	background-image: url(../images/podbackground.jpeg), no-repeat;
 	font-size:16px;
 }
 
@@ -18,7 +19,6 @@ header{
 	padding:1em;
 	text-transform: lowercase;
 	text-align: right;
-	
 }
 
 section#splash {
@@ -32,26 +32,10 @@ img{
 	border-color: rgba(0,0,0,.3);
 	clear: right;
 	float: left;
-	width: 766px;
+	height: 80vh;
 	opacity: .7;
 
 }
-/*
-#logo{
-	background-color: rgba(200,250,200,.8);
-	border-radius: 300px;
-	color: #222;
-	clear: right;
-	float: right;
-	font-size: 3em;
-	height: 300px;
-	width: 300px;
-	margin: .5em 0 .5em 0;
-	padding-top: 120px;
-	text-align: center;
-	text-transform: lowercase;
-}
-*/
 
 #slogan{
 	background-color: rgba(255,255,0,.5);
@@ -62,18 +46,14 @@ img{
 	font-style: italic;
 	font-size: 1.8em;
 	line-height: 2em;
-	margin-top: 5em;
-	margin-left: 1em;
-	padding-top: 3.0em;
-	height: 10em;
+	padding-top: 6.0em;
+	height: 110vh;
 	width: 10em;
-	border-radius: 10em;
 	text-align: center;
 	
-}
+}	
 
 nav{
-	background-color: rgba(255,255,255,.4);
 	color: #222;
 	clear: right;
 	font-family: 'Muli', sans-serif;
@@ -81,6 +61,7 @@ nav{
 	font-weight: 100;
 	height: 50vh;
 	line-height: 1.5em;
+	margin: 1em 0 2em 0;
 	text-align: right;
 	width: 187px;
 }
@@ -88,33 +69,24 @@ nav{
 
 ul{
 	list-style-type: none;
-	margin: 1em 0 2em 0;
-
+	
 }
 
 li{
 	padding: 1em 1em 1em 1em;
-	
 }
 
-section#podcasts {
-	clear:both;
-	font-family: 'Muli', sans-serif;
-
+li#ep {
+	display: inline;
+	max-height: 60%; 
+	width: 33%;
 }
 
-.episodes{
-	text-transform: uppercase;
-	background-color: rgba(0,0,0,.4);
-	width: 33%; 
-
-}
-
-#footer{
-	background-color: rgba(0,0,0,1);
+#tagline{
+	background-color: rgba(0,255,255,0);
+	color: #222;
 	clear: both;
-	color: white;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Muli', sans-serif;
 	font-size: 1em;
 	letter-spacing: .1em;
 	line-height:1.5em;
@@ -122,3 +94,33 @@ section#podcasts {
 	text-align: right;
 
 }
+
+h2{
+	background: rgb(255,255,255);
+	font-size: 2em;
+	padding: .5em;
+	text-align: center;
+	text-transform: uppercase;
+	letter-spacing: .5em;
+}
+
+section#podcasts {
+
+	font-family: 'Muli', sans-serif;
+}
+
+.episodes{
+	text-transform: uppercase;
+	width: 33%; 
+}
+
+#latest{
+	height: 20em;
+	background: rgba(100,150,180,.6);
+}
+
+#popular{
+	height: 20em;
+	background: rgba(150,100,130,.6);
+}
+
