--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ img{
 
 #slogan{
 	background-color: rgba(144,178,4,.6);
-	color: #222;
+	color: rgba(255,255,255,1);
 	clear: right;
 	float: right;
 	font-family: 'Fauna One', serif;
