--- a/css/style.css
+++ b/css/style.css
@@ -5,16 +5,18 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway);
 
 body{
-	font-family: "Lucida Console", monaco, monospace;
+	background-color: rgba(255,255,255,.1);
 	color: #222;
+	font-family: "Lucida Console", monaco, monospace;
 	font-size:16px;
+
 }
 
 header{
 	background-color: rgba(0,0,0,1);
 	color: white;
 	letter-spacing: .5em;
-	padding:1em;
+	padding: 1em;
 	text-transform: lowercase;
 	text-align: right;
 }
@@ -22,68 +24,68 @@ header{
 section#splash {
 	display: inline-block;
 	float: left;
-	height: 80vh;
-	margin: auto;
+	height: 70vh;
 }
 
 #splash img{
 	border-style: none;
 	border-color: rgba(0,0,0,.3);
 	float: left;
-	height: 80vh;
+	height: 70vh;
 	opacity: .7;
 
 }
 
 #slogan{
-	background-color: rgba(144,178,4,.6);
-	color: rgba(255,255,255,1);
 	float: left;
 	font-family: 'Fauna One', serif;
 	font-style: italic;
 	font-size: 1.8em;
+	height: 70vh;
 	line-height: 2em;
-	padding-top: 6.0em;
-	height: 110vh;
-	width: 10em;
+	padding-top: 5.0em;
+	margin-left: 1.5em;
 	text-align: center;
 	
 }	
 
 nav{
 	color: #222;
-	clear: right;
-	font-family: 'Muli', sans-serif;
+	display: inline;
 	float: right;
+	font-family: 'Muli', sans-serif;
 	font-weight: 100;
-	height: 50vh;
 	line-height: 1.5em;
 	margin: 1em 0 2em 0;
 	text-align: right;
-	width: 187px;
 }
 
-
 ul{
-	list-style-type: none;
-	
+	list-style-type: none;	
+}
+
+li{
+	padding: 1em;
+	width: 25%;
+	display: inline;
 }
 
 li{
 	padding: 1em;
 }
 
-
-#tagline{
-	background-color: rgba(0,255,255,0);
+section#tagline{
+	background-color: rgba(240,60,150,.5);
 	color: #222;
 	clear: both;
 	font-family: 'Muli', sans-serif;
-	font-size: 1em;
+	font-size: 2em;
 	letter-spacing: .1em;
-	line-height:1.5em;
-	padding: .1em;
-	text-align: right;
+	line-height: 3.3em;
+	padding: 2em;
+	height: 70vh;
+	
+	text-align: center;
 
 }
 
@@ -98,6 +100,34 @@ h2{
 
 section#podcasts {
 	font-family: 'Muli', sans-serif;
+	background-color: rgba(200,240,80,.7);
+}
+
+section#latest{
+
+}
+
+#latest h2{
+	text-align: left;
+
+}
+
+section#popular{
+
+}
+
+#popular h2{
+	text-align: left;
+
+}
+
+section#more{
+
+}
+
+#More h2{
+	text-align: left;
+	
 }
 
 .episodes{
@@ -105,24 +135,23 @@ section#podcasts {
 	text-transform: uppercase;
 	width: 33.33%; 
 }
+
 .episodes img {
 	display:block;
 	float:left;
+	margin: 1em 0;
 	width:50%;
 }
 .episodes div {
 	float:left;
 	padding: 5em 0 0 2em;
-	width:50%;
+	width: 50%;
+	
+	margin: 1em 0;
 }
 
-#latest{
-	background: rgba(0,77,178,.6);
-}
 
-#popular{
-	background: rgba(255,100,83,.6);
-}
+
 
 .clearfix:after { 
 	content: "."; 
