--- a/css/style.css
+++ b/css/style.css
@@ -5,33 +5,33 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway);
 
 body{
-	background-color: rgba(255,255,255,.1);
+	background-color: rgba(200,255,250,.3);
 	color: #222;
 	font-family: "Lucida Console", monaco, monospace;
 	font-size:16px;
-	margin: 0 auto;
 
 }
 
 header{
-	background-color: rgba(0,0,0,1);
-	color: white;
+	background-color: #222;
+	color: #FFF;
 	letter-spacing: .5em;
 	padding: 1em;
+	margin-bottom: 2em;
 	text-transform: lowercase;
-	text-align: right;
+	text-align: left;
 }
 
 nav{
-	color: #222;
+	color: #FFF;
 	font-family: 'Muli', sans-serif;
-	font-size: 1.2em;
+	font-size: 1em;
 	font-weight: 100;
 	letter-spacing: .1em;
 	line-height: 1.5em;
-	margin: 0 auto;
+	margin-bottom: 1em;
 	padding: 1em;
-	text-align: center;
+	text-align: right;
 }
 
 ul{
@@ -39,104 +39,86 @@ ul{
 }
 
 li{
-	display: inline;
 	padding: 1em;
-	width: 50%;
+	
 }
 
 section#splash {
-	clear: both;
+	background-color: #00B6BA;
+	border-radius: 1em;
 	height: 60vh;
 	margin: 0 auto;
-	max-width: 1100px;
+	max-width: 1200px;
 
 }
 
 #splash img{
 	border-style: none;
-	border-color: rgba(0,0,0,.3);
+	border-top-left-radius: 1em;
+	border-bottom-left-radius: 1em;
 	float: left;
 	height: 100%;
-	opacity: .7;
 
 }
 
 #slogan{
+	color: #FFF;
 	float: left;
 	font-family: 'Fauna One', serif;
 	font-style: italic;
-	font-size: 3em;
-	height: 25%;
-	letter-spacing: .1em;
-	padding: 2em 0 0 1.5em;
+	font-size: 2.5em;
+	height: 100%;
 	line-height: 2em;
+	padding: 2em 0 0 1.5em;
 	text-align: center;
-	
 }	
-
-section#tagline{
-	color: #222;
-	clear: both;
-	font-family: 'Muli', sans-serif;
-	font-size: 1em;
-	letter-spacing: .1em;
-	line-height: 1.5em;
-	margin-top: 1em;
-	text-align: right;
-
-}
 
 h2{
 	font-size: 2em;
 	padding: .5em;
-	text-align: center;
-	text-transform: uppercase;
+	text-align: left;
+	text-transform: lowercase;
 	letter-spacing: .5em;
 }
 
 section#podcasts {
 	font-family: 'Muli', sans-serif;
 	margin: 0 auto;
-	max-width: 1100px;
-	padding-top: 3em;
+	max-width: 1200px;
+	padding-top: 1em;
 	
 }
 
-
-#latest h2{
-	text-align: left;
-
-}
-
-#popular h2{
-	text-align: left;
-
-}
-
-#More h2{
-	text-align: left;	
-}
-
 .episodes{
+	background-color: #00B6BA;
+	border-radius: 1em;
 	float:left;
 	text-transform: uppercase;
-	width: 25%; 
+	margin: .16%;
+	width: 33%; 
 }
 
 .episodes img {
 	display:block;
 	float:left;
 	margin: 1em 0;
-	width:50%;
+	width: 50%;
 }
 
 .episodes div {
+	color: #FFF;
 	float:left;
-	padding: 5em 0 0 2em;
+	padding: 5em 1em 0 2em;
 	width: 50%;
 	margin: 1em 0;
 }
 
+footer{
+	background: #222;
+	color: #FFF;
+	font-family: 'Muli', sans-serif;
+	padding: 1em;
+}
 
 .clearfix:after { 
 	content: "."; 
