--- a/css/style.css
+++ b/css/style.css
@@ -26,15 +26,79 @@ header h1{
 	float: left;
 }
 
+section#new { 
+	background-color: rgba(0,0,0,.5);
+	border-color: rgba(0,0,0,.3);
+	color: #FFF;
+	float: left;
+	font-family: 'Muli', sans-serif;
+	margin: 5% 1% 5% 1%;
+	width: 63%;
+	height: 100%;
+}
+
+#new img{
+	float: left;
+	padding: 1%;
+	width: 38%;
+}
+
+#new iframe{
+	padding: 1em;
+}
+
+#new div{
+	float: left;
+	width: 60%;
+}
+
+#new h3{
+	font-size: 1.5em;
+	padding: 1em 1em 0 1em;
+}
+
+#new p{
+	font-size: 1em;
+	padding: 0em 1em 0em 1.5em;
+
+}
+
+
+div#splash {
+	background-image: url(../images/podcalbackgroundweb.jpg);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: 100%;
+
+}
+
+
+
+#slogan{
+	background: rgba(90,167,186,.9);
+	color: #FFF;
+	float: left;
+	font-family: 'Fauna One', serif;
+	font-style: italic;
+	font-size: 1.7em;
+	height: 100%;
+	line-height: 2.5em;
+	padding-bottom: 7.1em;
+	padding-top: 6.72em;
+	text-align: center;
+	width: 20%;
+}	
+
 nav{
-	background-color: rgba(0,0,0,.2);
+	background-color: rgba(0,0,0,0);
 	float: right;
 	font-family: 'Muli', sans-serif;
-	font-size: 1.3em;
+	font-size: 1em;
 	font-weight: 100;
 	letter-spacing: .1em;
 	text-align: right;
-	width: 20%;
+	width: 15%;
 }
 
 nav a{
@@ -50,36 +114,6 @@ nav a:hover{
 	color: #FFF;
 
 }
-
-div#splash {
-	background-image: url(../images/episode.jpg);
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: 100%;
-
-}
-
-section#new { 
-	border-color: rgba(0,0,0,.3);
-	float: left;
-	width: 60%;
-	height: 100%;
-}
-
-#slogan{
-	background: rgba(90,167,186,.9);
-	color: #FFF;
-	float: left;
-	font-family: 'Fauna One', serif;
-	font-style: italic;
-	font-size: 1.7em;
-	height: 100%;
-	line-height: 2.5em;
-	padding-bottom: 4.6em;
-	padding-top: 4.5em;
-	text-align: center;
-	width: 20%;
-}	
 
 h2{
 	font-size: 2em;
@@ -129,6 +163,7 @@ h2{
 #programs{
 	background-color: #222;
 	color: #FFF;
+	font-family: 'Muli', sans-serif;
 	margin-top: 1em;
 }
 
