--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ section#new {
 	float: left;
 	font-family: 'Muli', sans-serif;
 	margin: 5% 1% 5% 1%;
+	position: relative;
 	width: 63%;
 	height: 100%;
 }
@@ -40,13 +41,13 @@ section#new {
 #new img{
 	float: left;
 	padding: 1%;
-	width: 38%;
+	width: 30%;
 }
 
 #new iframe{
-	padding: 1em;
+	padding: 0 0 .1em 1em;
 	position: relative;
-	top: 1em;
+	bottom: 0em;
 }
 
 #new div{
@@ -56,12 +57,12 @@ section#new {
 
 #new h3{
 	font-size: 1.5em;
-	padding: 1em 1em 0 1em;
+	padding: 0 1em 0 1em;
 }
 
 #new p{
 	font-size: 1em;
-	padding: 0em 1em 0em 1.5em;
+	padding: .2em 1em 1em 1.5em;
 
 }
 
@@ -74,7 +75,6 @@ div#splash {
 	background-size: 100%;
 
 }
-
 
 
 #slogan{
@@ -113,8 +113,6 @@ nav a{
 
 nav a:hover{
 	background-color: rgba(90,167,186,.9);
-	color: #FFF;
-
 }
 
 h2{
@@ -130,7 +128,7 @@ h2{
 	font-family: 'Muli', sans-serif;
 	margin: 0 auto;
 	max-width: 1200px;
-	padding-top: 1em;
+	padding: 5em;
 	
 }
 
@@ -141,9 +139,9 @@ h2{
 .episodes{
 	background-color: rgba(90,167,186,1);
 	border-radius: .3em;
-	float:left;
+	float: left;
 	text-transform: uppercase;
-	margin: .16%;
+	margin: .15%;
 	width: 33%; 
 }
 
@@ -157,7 +155,7 @@ h2{
 .episodes div {
 	color: #FFF;
 	float:left;
-	padding: 5em 1em 0 2em;
+	padding: 4em 1em 0 1em;
 	width: 50%;
 	margin: 1em 0;
 }
@@ -167,6 +165,7 @@ h2{
 	color: #FFF;
 	font-family: 'Muli', sans-serif;
 	margin-top: 1em;
+	padding: 5em;
 }
 
 #More{
