--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
-* {margin:0;padding:0;box-sizing:border-box;}
-
 @import url(http://fonts.googleapis.com/css?family=Muli);
 @import url(http://fonts.googleapis.com/css?family=Fauna+One);
 @import url(http://fonts.googleapis.com/css?family=Raleway);
+
+* {margin:0;padding:0;box-sizing:border-box;}
 
 body{
 	background-color: rgba(200,255,250,.3);
@@ -13,107 +13,93 @@ body{
 }
 
 header{
-	background-color: #222;
-	color: #FFF;
+	background-color: #FFF;
+	color: #222;
 	letter-spacing: .5em;
-	padding: 1em;
 	text-transform: lowercase;
 	text-align: left;
 }
 
 header h1{
-	background-color: #222;
+	background-color: #FFF;
 	float: left;
+	padding: .5em;
+	width: 35%;
 }
-
-section#new { 
-	background-color: rgba(0,0,0,.5);
-	border-color: rgba(0,0,0,.3);
-	color: #FFF;
-	float: left;
-	font-family: 'Muli', sans-serif;
-	margin: 5% 1% 5% 1%;
-	position: relative;
-	width: 63%;
-	height: 100%;
-}
-
-#new img{
-	float: left;
-	padding: 1%;
-	width: 30%;
-}
-
-#new iframe{
-	padding: 0 0 .1em 1em;
-	position: relative;
-	bottom: 0em;
-}
-
-#new div{
-	float: left;
-	width: 60%;
-}
-
-#new h3{
-	font-size: 1.5em;
-	padding: 0 1em 0 1em;
-}
-
-#new p{
-	font-size: 1em;
-	padding: .2em 1em 1em 1.5em;
-
-}
-
-
-div#splash {
-	background-image: url(../images/podcalbackgroundweb.jpg);
-	background-position: center;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-size: 100%;
-
-}
-
-
-#slogan{
-	background: rgba(90,167,186,.9);
-	color: #FFF;
-	float: left;
-	font-family: 'Fauna One', serif;
-	font-style: italic;
-	font-size: 1.7em;
-	height: 100%;
-	line-height: 2.5em;
-	padding-bottom: 7.1em;
-	padding-top: 6.72em;
-	text-align: center;
-	width: 20%;
-}	
 
 nav{
-	background-color: rgba(0,0,0,0);
+	background-color: #FFF;
 	float: right;
 	font-family: 'Muli', sans-serif;
 	font-size: 1em;
 	font-weight: 100;
-	letter-spacing: .1em;
-	text-align: right;
-	width: 15%;
+	letter-spacing: .2em;
+	text-align: center;
+	width: 60%;
 }
 
 nav a{
-	color: #FFF;
+	color: #222;
 	float: left;
-	padding: 2.5em 1.5em;
-	width: 100%;
+	padding: 1.3em 1em 1.4em 1em;
+	width: 25%;
 	text-decoration: none;
 }
 
 nav a:hover{
 	background-color: rgba(90,167,186,.9);
+	color: #FFF;
 }
+
+section#splash{
+	background-image: url(../images/podcalbackgroundweb.jpg); 
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-size: 100%;
+	height: 85vh;
+}
+
+.wrappernew {
+	max-width: 1200px;
+	margin: 0 auto;
+}
+
+section#new { 
+	background-color: rgba(90,167,186,.9);
+	border-color: rgba(0,0,0,.3);
+	box-shadow: 0px 1px 1px 0px rgba(0,0,0,.7);
+	color: #FFF;
+	float: left;
+	font-family: 'Muli', sans-serif;
+	margin: 5% 1% 5% 1%;
+	position: relative;
+	width: 55%;
+}
+
+#new div{
+	float: left;
+
+}
+
+#new h3{
+	float: left;
+	font-size: 1.5em;
+	padding: 1%;
+	
+}
+
+#new p{
+	float: left;
+	padding: 1em;
+	font-size: 1em;
+
+}
+
+#new iframe{
+	float: left;
+	padding: 1%;
+}
+
 
 h2{
 	font-size: 2em;
@@ -123,22 +109,21 @@ h2{
 	letter-spacing: .5em;
 }
 
+.wrapper {
+	max-width: 1200px;
+	margin: 0 auto;
+}
 
 #podcasts {
 	font-family: 'Muli', sans-serif;
-	margin: 0 auto;
-	max-width: 1200px;
 	padding: 5em;
 	
-}
-
-#More {
-	margin-bottom: 1em;
 }
 
 .episodes{
 	background-color: rgba(90,167,186,1);
 	border-radius: .3em;
+	box-shadow: 0px 1px 1px 0px rgba(0,0,0,.7);
 	float: left;
 	text-transform: uppercase;
 	margin: .15%;
@@ -164,37 +149,32 @@ h2{
 	background-color: #222;
 	color: #FFF;
 	font-family: 'Muli', sans-serif;
-	margin-top: 1em;
 	padding: 5em;
 }
 
-#More{
-	max-width: 1200px;
-	margin: 0 auto;
-}
-
-.moreepisodes{
+.shows{
 	background-color: rgba(90,167,186,.9);
 	border-radius: .3em;
 	float:left;
 	text-transform: uppercase;
-	margin: .25%;
-	width: 24%; 
-}
-
-.moreepisodes img{
-	display:block;
-	float:left;
 	margin: 1%;
-	width: 48%;
+	width: 15%; 
+}
+
+.shows img{
+	display:block;
+	padding: 2%;
+	margin: 1%;
+	width: 100%;
 
 }
 
-.moreepisodes div {
+.shows div {
 	color: #FFF;
-	float:left;
-	padding: 2em 1em 0 2em;
-	width: 50%;
+	padding: 1%;
+	margin: 1%;
+	text-align: center;
+	width: 100%;
 
 }
 
@@ -212,4 +192,231 @@ footer{
 	display: block; 
 	height: 0; 
 	clear: both;
+}
+
+@media only screen and (min-width: 892px) and (max-width: 1200px) {
+	header h1{
+		float: none;
+	}
+
+	nav {
+		float: none;
+		width: 100%;
+	}
+
+	section#splash {
+		height: 70vh;
+	}
+
+	section#new {
+		margin: none;
+		width: 70%;
+
+	}
+
+	.wrappernew {
+		max-width: 900px;
+		margin: 0 auto;
+	}
+
+	.wrapper {
+		max-width: 900px;
+		margin: 0 auto;
+	}
+
+	#podcasts {
+		padding: 1em;
+		margin: 0 auto;
+		width: 90%;
+	}
+
+	.episodes {
+		float: left;
+		margin: 1%;
+		width: 80%
+	}
+
+	.episodes h3{
+		font-size: 1.8em;
+		line-height: 1.8em;
+	}
+
+	.episodes p {
+		font-size: 1.3em;
+	}
+
+	.episodes img {
+		float: left;
+		margin: 1%;
+		width: 30%;
+
+	}
+
+	.episodes div {
+		float: left;
+		margin: 1%;
+		padding: 7em 1em 0 1em;
+		width: 60%;
+	}
+
+	.shows {
+		width: 20%;
+	}
+
+}
+
+@media only screen and (min-width: 726px) and (max-width: 891px) {
+	header {
+		text-align: center;
+	}
+
+	header h1{
+		float: none;
+		width: 100%;
+	}
+
+	nav {
+		float: none;
+		width: 100%;
+	}
+
+	section#splash {
+		background-image: none;
+		height: 30vh;
+	}
+
+	section#new {
+		padding: 0;
+		margin: 0 0 1em 0;
+		width: 100%;
+	}
+
+	.wrappernew {
+		max-width: none;
+	}
+
+	.wrapper {
+		max-width: 725px;
+
+	}
+
+	#podcasts {
+		padding: 1em;
+		margin: 0 auto;
+		width: 100%;
+	}
+
+	.episodes {
+		float: left;
+		margin: 1%;
+		width: 80%
+	}
+
+	.episodes h3{
+		font-size: 1.8em;
+		line-height: 1.8em;
+	}
+
+	.episodes p {
+		font-size: 1.3em;
+	}
+
+	.episodes img {
+		float: left;
+		margin: 1%;
+		width: 30%;
+
+	}
+
+	.episodes div {
+		float: left;
+		margin: 1%;
+		padding: 5em 1em 0 1em;
+		width: 60%;
+	}
+
+	.shows {
+		width: 25%;
+	}
+
+}
+
+@media only screen and (max-width: 725px) {
+	header {
+		text-align: center;
+	}
+
+	header h1{
+		float: none;
+		width: 100%;
+	}
+
+	nav {
+		float: none;
+		width: 100%;
+	}
+
+	section#splash {
+		background-image: none;
+		height: 30vh;
+	}
+
+	section#new {
+		padding: 0;
+		margin: 0 0 1em 0;
+		width: 100%;
+	}
+
+	.wrappernew {
+		max-width: none;
+	}
+
+	.wrapper {
+		max-width: 725px;
+
+	}
+
+	#podcasts {
+		padding: 1em;
+		margin: 0 auto;
+		width: 100%;
+	}
+
+	.episodes {
+		float: left;
+		margin: 1%;
+		width: 80%
+	}
+
+	.episodes h3{
+		font-size: 1.8em;
+		line-height: 1.8em;
+	}
+
+	.episodes p {
+		font-size: 1.3em;
+	}
+
+	.episodes img {
+		float: left;
+		margin: 1%;
+		width: 30%;
+
+	}
+
+	.episodes div {
+		float: left;
+		margin: 1%;
+		padding: 5em 1em 0 1em;
+		width: 60%;
+	}
+
+	.shows {
+		margin: 1%;
+		width: 46%;
+
+	}
+
+}
+
 }
