--- a/css/style.css
+++ b/css/style.css
@@ -15,20 +15,20 @@ body{
 header{
 	background-color: #FFF;
 	color: #222;
+	height: 3.95em;
 	letter-spacing: .5em;
 	text-transform: lowercase;
 	text-align: left;
 }
 
-header h1{
-	background-color: #FFF;
+header img {
 	float: left;
-	padding: .5em;
-	width: 35%;
+	margin-bottom: -12em;
+	padding: 1em 1em 1em 2em;
+	width: 20%;
 }
 
 nav{
-	background-color: #FFF;
 	float: right;
 	font-family: 'Muli', sans-serif;
 	font-size: 1em;
@@ -69,7 +69,7 @@ section#new {
 	border-color: rgba(0,0,0,.3);
 	box-shadow: 0px 1px 1px 0px rgba(0,0,0,.7);
 	color: #FFF;
-	float: left;
+	float: right;
 	font-family: 'Muli', sans-serif;
 	margin: 7.5% 1% 10% 1%;
 	position: relative;
@@ -145,6 +145,11 @@ h2{
 	margin: 1em 0;
 }
 
+.episodes:hover{
+	background-color: rgba(90,167,186,.8);
+
+} 
+
 .wrapperprogramming {
 	background-color: #222;
 }
@@ -199,13 +204,9 @@ footer{
 }
 
 @media only screen and (min-width: 892px) and (max-width: 1200px) {
-	header h1{
-		float: none;
-	}
 
 	nav {
-		float: none;
-		width: 100%;
+		width: 80%;
 	}
 
 	section#splash {
@@ -359,6 +360,7 @@ footer{
 }
 
 @media only screen and (min-width: 532px) and (max-width: 725px) {
+
 	header {
 		text-align: center;
 	}
@@ -390,7 +392,7 @@ footer{
 	}
 
 	.wrapper {
-		max-width: 532px;
+		max-width: none;
 		margin: 0 auto;
 
 	}
@@ -529,10 +531,13 @@ footer{
 		text-align: center;
 	}
 
-	header h1{
-		float: none;
-		padding: 1em 0 1em 0;
+	header img{ 
+		margin: 0 auto;
+		padding: 0 5em 1em 5em;
 		width: 100%;
+	}
+	body {
+		background-color: #FFF;
 	}
 
 	nav {
