--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
 * {margin:0;padding:0;box-sizing:border-box;}
 
 body{
-	background-color: rgba(200,255,250,.3);
 	color: #222;
 	font-family: "Lucida Console", monaco, monospace;
 	font-size:16px;
@@ -144,6 +143,7 @@ h2{
 
 .episodes:hover{
 	background-color: rgba(90,167,186,.8);
+	box-shadow: 0px 3px 2px 0px rgba(0,0,0,.7);
 
 } 
 
@@ -193,7 +193,7 @@ footer{
 }
 
 footer p {
-	margin: 1em 0 1em 0;
+	margin: 0 0 2em 0;
 }
 
 footer a { 
@@ -203,9 +203,62 @@ footer a {
 	font-family: 'Muli', sans-serif;
 	font-size: .9em;
 	letter-spacing: .2em;
-	padding: 1em;
+	padding: .5em 0 .5em 1em;
 	text-decoration: none;
 	width: 25%;
+}
+
+.mobile-nav {
+	display: none;
+	float: right;
+	background-color: rgba(90,167,186,.9);
+	font-family: 'Muli', sans-serif;
+	padding: .7em;
+}
+
+.menu-btn {
+	padding: .5em;
+}
+
+.menu-btn div {
+	position: absolute;
+	right: 100%;
+	top: 64%;
+	padding-right: 8px;
+	margin-top: -0.50em;
+	line-height: 1.2;
+	font-size: 18px;
+	font-weight: 200;
+	vertical-align: middle;
+	z-index: 99;
+}
+ 
+.menu-btn span {
+	display: block;
+	width: 19px;
+	height: 3px;
+	margin: 4px 0;
+	background: #FFF;
+	z-index: 99;
+}
+ 
+.responsive-menu{
+	display: none;
+
+}
+
+.responsive-menu li{
+	list-style-type: none;
+	margin: 2em;
+}
+
+.responsive-menu a{
+	color: #FFF;
+	text-decoration: none;
+}
+ 
+.expand {
+	display: block !important;
 }
 
 .clearfix:after, .episodes:after { 
