--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ header{
 	text-align: left;
 }
 
-header img {
+header > img {
 	border-radius: 50%;
 	box-shadow: 0px 2px 1px 0px rgba(0,0,0,.7);
 	float: left;
